--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <script>
     $(document).ready(function() {
         $('form').submit(function() {
-            $.get("https://api.openweathermap.org/data/2.5/weather?q="+$('#city').val()+"&&appid=ab9c65ae005feb90963d427eeeca958a", function(data) {
-                $('#info').html("<h1>"+data.name+", "+data.sys.country+"</h1><h3>Temperatura: "+((data.main.temp)-273).toFixed(2)+"°C</h3><h3>Sensación térmica: "+((data.main.feels_like)-273).toFixed(2)+"°C</h3><h3 class='tohide'>Mínima: "+((data.main.temp_min)-273).toFixed(2)+"°C</h3><h3 class='tohide'>Máxima: "+((data.main.temp_max)-273).toFixed(2)+"°C</h3><h3 class='tohide'>Presión: "+(data.main.pressure)+" hPa</h3><h3 class='tohide'>Humedad: "+(data.main.humidity)+"%</h3>")
+            var url = "https://api.openweathermap.org/data/2.5/weather?q="
+            var apiKey = "&&appid=ab9c65ae005feb90963d427eeeca958a&units=metric"
+            $.get(url+$('#city').val()+apiKey, function(data) {
+                $('#info').html("<h1>"+data.name+", "+data.sys.country+"</h1><h3>Temperatura: "+data.main.temp+"°C</h3><h3>Sensación térmica: "+data.main.feels_like+"°C</h3><h3 class='tohide'>Mínima: "+data.main.temp_min+"°C</h3><h3 class='tohide'>Máxima: "+data.main.temp_max+"°C</h3><h3 class='tohide'>Presión: "+data.main.pressure+" hPa</h3><h3 class='tohide'>Humedad: "+data.main.humidity+"%</h3>")
                 $('.tohide').hide()
                 $('.mostrarmas').show()
             }, 'json');
